# d3d12_study

direct3d_12_init/: Cargo.toml
direct3d_12_init/src/: graphics.rs  main.rs  winapi_helper.rs
directx_math_study/: Cargo.toml
directx_math_study/src/: main.rs
