[package]
name = "direct3d_12_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
const-default = {version = "1.0", features = ["derive"]}

[dependencies.windows]
version = "0.52"
features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_Graphics_Direct3D",
	"Win32_Graphics_Direct3D12",
	"Win32_Graphics_Dxgi",
	"Win32_System_LibraryLoader",
]
